# ebi_mc2

./: .gitignore  ChangeLog  Makefile  Makefile.am  README.md  configure.ac  ebi_mc2-test.config  rebar.config
bugs/: issue-070ba67bc464ec63c0cc81a7358425cfa0d113f6.yaml  issue-129f0ec23ba132291146ef7fac767b28f90e6408.yaml  issue-173f281ac37ce86b59303c12e54179d45dba2e9d.yaml  issue-3af0c986680a05e347c9ebe4f1aba9cc7f6a502a.yaml  issue-3d465cd85b053dffb4390f16be12a67c1233ea24.yaml  issue-5736b64672c0d52a78aa5459259189b56881f65a.yaml  issue-7af7151318702aaae2387ba95f78eb990dba7dcc.yaml  issue-82bc6682f7b16c86b0e97977fe008ed11676b147.yaml  issue-8bdc6d11b30da8c1270c6afbbd77fe3c5086777d.yaml  issue-8fc577f9c1d9f9e4f72b0cba2eec5621bfbe2de4.yaml  issue-b9300b646d2529866ae8d32f0730b502ce64a7a1.yaml  issue-e8a8bb24ce4f708d64e78e0aab3c1e28013b2ecb.yaml  project.yaml
example/str_nanotubes_JR/: bio.erl  bio_sim.erl  model-1D-k2fin-t5.xml
include/: ebi_mc2.hrl
itest/: basic_SUITE.erl  main_SUITE.erl  test_mnesia_SUITE.erl
priv/cluster/: .gitignore  Makefile  README  README.md  bio-solver  bio-solver-sup.awk  cleanup  cluster  cluster-shell  clusterrc.ex
src/: bio_ers_queue_mifcl2.erl  bio_ers_queue_mifcl2_part_sup.erl  bio_ers_queue_mifcl2_part_supersup.erl  bio_ers_queue_mifcl2_sim.erl  bio_ers_queue_mifcl2_sim_sup.erl  bio_ers_queue_mifcl2_ssh_chan.erl  bio_ers_queue_mifcl2_sup.erl  ebi.app.src.in  ebi_mc2.app.src  ebi_mc2.erl  ebi_mc2_app.erl  ebi_mc2_cluster.erl  ebi_mc2_cluster_resp.erl  ebi_mc2_cluster_setsup.erl  ebi_mc2_cluster_sup.erl  ebi_mc2_part_sup.erl  ebi_mc2_part_supersup.erl  ebi_mc2_queue.erl  ebi_mc2_queue_store.erl  ebi_mc2_sim.erl  ebi_mc2_sim_sup.erl  ebi_mc2_simulation.erl  ebi_mc2_simulation_setsup.erl  ebi_mc2_simulation_sup.erl  ebi_mc2_ssh_chan.erl  ebi_mc2_sup.erl
test/: bio_ers_queue_mifcl2_ssh_chan_tests.erl  ebi_mc2_cluster_resp_tests.erl  ebi_mc2_queue_tests.erl  ebi_mc2_simulation_tests.erl  ebi_mc2_ssh_chan_tests.erl
